start fish on every tmux pane

--- a/sources/.tmux.conf
+++ b/sources/.tmux.conf
@@ -1,5 +1,5 @@
 #set shell
-#set -g default-shell /home/slash3b/.nix-profile/bin/fis
+set -g default-shell $HOME/.nix-profile/bin/fish
 
 set -g default-terminal "screen-256color"
 
