--- a/sources/.tmux.conf
+++ b/sources/.tmux.conf
@@ -38,7 +38,7 @@ set-option -g status-position top
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami) '
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g status-right ''
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
