--- a/sources/.tmux.conf
+++ b/sources/.tmux.conf
@@ -7,8 +7,9 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 
 # Automatically set window title
-set-window-option -g automatic-rename on
 set-option -g set-titles on
+set-window-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # set -g default-terminal screen-256color
 set -g history-limit 10000
