--- a/sources/i3/config
+++ b/sources/i3/config
@@ -187,7 +187,7 @@ bindsym $mod+l exec --no-startup-id i3lock -c 000000 -d
 
 # walls <3
 # /home/slash3b/.config/i3
-exec --no-startup-id feh --bg-max /home/slash3b/.config/i3/seattle.jpg
+exec --no-startup-id feh --bg-fill /home/slash3b/.config/i3/seattle.jpg
 
 # keyboard lang switch
 exec --no-startup-id "setxkbmap -layout us,ru -option grp:win_space_toggle"
