--- a/sources/.gitconfig
+++ b/sources/.gitconfig
@@ -1,7 +1,6 @@
 [user]
 	name = Ilya Tribusean
 	email = slash3b@gmail.com
-    signingkey = A13AE6BBAF0DADF2
 
 [core]
 	excludesfile = ~/.gitignore
@@ -9,15 +8,10 @@
 	editor = nvim
 
 [rerere]
-    	enabled = 1
+    enabled = 1
 
 [init]
 	defaultBranch = main
 
-[gpg]
-    program = gpg
-
-# use conditional to sign only for work(?)
-# see https://git-scm.com/docs/git-config#_example
-[commit]
-    gpgsign = true
+[includeIf "gitdir:~/Projects/work/"]
+    path = .gitconfig.work
